--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>GLB 3D Chess</title>
+  <title>3D Chess GLB</title>
   <style>
     body {
       margin: 0;
@@ -15,61 +15,9 @@
   </style>
 </head>
 <body>
-  <!-- Include Three.js and GLTFLoader -->
+
   <script src="https://cdn.jsdelivr.net/npm/three@0.152.0/build/three.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/three@0.152.0/examples/js/loaders/GLTFLoader.js"></script>
-  <script>
-    // Set up the scene, camera, and renderer
-    const scene = new THREE.Scene();
-    const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-    const renderer = new THREE.WebGLRenderer();
-    renderer.setSize(window.innerWidth, window.innerHeight);
-    document.body.appendChild(renderer.domElement);
-
-    // Add lighting to the scene
-    const ambientLight = new THREE.AmbientLight(0xffffff, 0.6); // Soft light
-    scene.add(ambientLight);
-
-    const directionalLight = new THREE.DirectionalLight(0xffffff, 1);
-    directionalLight.position.set(5, 10, 7).normalize();
-    scene.add(directionalLight);
-
-    // Load the GLB file
-    const loader = new THREE.GLTFLoader();
-    loader.load(
-      'models/chess.glb', // Path to the GLB file
-      (gltf) => {
-        const model = gltf.scene;
-        model.scale.set(0.5, 0.5, 0.5); // Adjust the scale of the model
-        model.position.set(0, -1, 0);   // Adjust the position of the model
-        scene.add(model);
-
-        console.log('Model loaded:', model);
-      },
-      (xhr) => {
-        console.log((xhr.loaded / xhr.total * 100) + '% loaded'); // Progress logging
-      },
-      (error) => {
-        console.error('An error occurred while loading the GLB:', error);
-      }
-    );
-
-    // Set up the camera position
-    camera.position.z = 5;
-
-    // Animate the scene
-    function animate() {
-      requestAnimationFrame(animate);
-      renderer.render(scene, camera);
-    }
-    animate();
-
-    // Adjust for window resizing
-    window.addEventListener('resize', () => {
-      camera.aspect = window.innerWidth / window.innerHeight;
-      camera.updateProjectionMatrix();
-      renderer.setSize(window.innerWidth, window.innerHeight);
-    });
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
