--- a/index.html
+++ b/index.html
@@ -3,21 +3,33 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>3D Chess GLB</title>
+  <title>3D Chess Viewer</title>
+  <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
   <style>
     body {
       margin: 0;
-      overflow: hidden;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      background-color: #feafaf;
     }
-    canvas {
-      display: block;
+    model-viewer {
+      width: 100%;
+      max-width: 800px;
+      height: 500px;
     }
   </style>
 </head>
 <body>
-
-  <script src="https://cdn.jsdelivr.net/npm/three@0.152.0/build/three.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/three@0.152.0/examples/js/loaders/GLTFLoader.js"></script>
-  <script src="script.js"></script>
+  <!-- Add the model-viewer element -->
+  <model-viewer
+    src="./models/chess.glb"
+    alt="A 3D chess piece"
+    ar
+    auto-rotate
+    camera-controls
+    background-color="#ffffff">
+  </model-viewer>
 </body>
 </html>
