--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Interactive 3D Model</title>
-  <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
+  <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script><!-- SUPER IMPORTANT WITHOUT THIS 3D OBJECT WILL NOT WORK -->
   <style>
     body {
       margin: 0;
@@ -22,7 +22,8 @@
       height: 500px;
       background-color: transparent;
     }
-
+    
+/* Influence the size of the 3d model */
     model-viewer {
       width: 100%;
       height: 100%;
@@ -33,14 +34,14 @@
       width: 30px;
       height: 30px;
       background-color: rgba(255, 0, 0, 0.8);
-      border-radius: 50%;
+      border-radius: 50%; /* this makes the circle round */
       cursor: pointer;
       border: 2px solid white;
       display: flex;
       justify-content: center;
       align-items: center;
     }
-
+/* here you style the text-box */
     .text-box {
       position: absolute;
       top: 50px;
@@ -49,11 +50,9 @@
       width: 80%;
       padding: 20px;
       background-color: white;
-      border: 1px solid #ccc;
-      border-radius: 8px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
       display: none;
-      z-index: 10;
+      z-index: 10; /* notice how the z-index increases, this helps */
     }
 
     .text-box p {
@@ -97,6 +96,7 @@
     </div>
   </div>
 
+  <!--JAVA SCRIPT STARTS HERE -->
   <script>
     //JAVASCRIPT THAT TRIGGERS CLICK ON CIRCLE TO OPEN TEXT BOX 
     const circles = document.querySelectorAll('.circle');
